@@ -1,47 +1,271 @@
-import java.util.List;
-import java.util.Optional;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
-public interface ps {
-   static void a(ph<ebr> $$0) {
-      ik<ebl> $$1 = $$0.a(kg.aD);
-      ik<cwq> $$2 = $$0.a(kg.at);
-      ij.c<ebr> $$3 = $$0.a(
-         ebe.a,
-         new ebr(
-            List.of(ebr.a($$1.b(ebf.t)), ebr.a($$1.b(ebf.u)), ebr.a($$1.b(ebf.v)), ebr.a($$1.b(ebf.w)), ebr.a($$1.b(ebf.x))), new ecg(34, 8, ech.a, 10387312)
-         )
-      );
-      $$0.a(ebe.b, new ebr($$1.b(ebf.f), new ecg(32, 8, ech.a, 14357617)));
-      $$0.a(ebe.c, new ebr($$1.b(ebf.g), new ecg(32, 8, ech.a, 14357618)));
-      $$0.a(ebe.d, new ebr($$1.b(ebf.e), new ecg(32, 8, ech.a, 14357619)));
-      $$0.a(ebe.e, new ebr($$1.b(ebf.j), new ecg(32, 8, ech.a, 14357620)));
-      $$0.a(ebe.f, new ebr($$1.b(ebf.a), new ecg(jd.g, eci.c.b, 0.2F, 165745296, Optional.of(new eci.a($$3, 10)), 32, 8, ech.a)));
-      $$0.a(ebe.q, new ebr($$1.b(ebf.F), new ecg(24, 8, ech.a, 20083232)));
-      $$0.a(ebe.g, new ebr($$1.b(ebf.l), new ecg(32, 5, ech.b, 10387313)));
-      $$0.a(ebe.h, new ebr($$1.b(ebf.d), new ecg(80, 20, ech.b, 10387319)));
-      $$0.a(ebe.i, new ebr($$1.b(ebf.r), new ecg(new jd(9, 0, 9), eci.c.c, 0.01F, 0, Optional.empty(), 1, 0, ech.a)));
-      $$0.a(ebe.j, new ebr(List.of(ebr.a($$1.b(ebf.b)), ebr.a($$1.b(ebf.c))), new ecg(jd.g, eci.c.d, 0.004F, 0, Optional.empty(), 1, 0, ech.a)));
+public class ps {
+   public static final ajb<edp> a = pq.a("village/savanna/town_centers");
+   private static final ajb<edp> b = pq.a("village/savanna/terminators");
+   private static final ajb<edp> c = pq.a("village/savanna/zombie/terminators");
+
+   public static void a(pj<edp> $$0) {
+      im<ebk> $$1 = $$0.a(ki.aD);
+      il<ebk> $$2 = $$1.b(rg.g);
+      il<ebk> $$3 = $$1.b(rg.a);
+      il<ebk> $$4 = $$1.b(rg.b);
+      im<ege> $$5 = $$0.a(ki.aF);
+      il<ege> $$6 = $$5.b(pr.b);
+      il<ege> $$7 = $$5.b(pr.j);
+      il<ege> $$8 = $$5.b(pr.m);
+      im<edp> $$9 = $$0.a(ki.aH);
+      il<edp> $$10 = $$9.b(pq.a);
+      il<edp> $$11 = $$9.b(b);
+      il<edp> $$12 = $$9.b(c);
       $$0.a(
-         ebe.k,
-         new ebr(
-            List.of(
-               ebr.a($$1.b(ebf.y)),
-               ebr.a($$1.b(ebf.z)),
-               ebr.a($$1.b(ebf.A)),
-               ebr.a($$1.b(ebf.B)),
-               ebr.a($$1.b(ebf.C)),
-               ebr.a($$1.b(ebf.D)),
-               ebr.a($$1.b(ebf.E))
+         a,
+         new edp(
+            $$10,
+            ImmutableList.of(
+               Pair.of(edn.a("village/savanna/town_centers/savanna_meeting_point_1"), 100),
+               Pair.of(edn.a("village/savanna/town_centers/savanna_meeting_point_2"), 50),
+               Pair.of(edn.a("village/savanna/town_centers/savanna_meeting_point_3"), 150),
+               Pair.of(edn.a("village/savanna/town_centers/savanna_meeting_point_4"), 150),
+               Pair.of(edn.a("village/savanna/zombie/town_centers/savanna_meeting_point_1", $$6), 2),
+               Pair.of(edn.a("village/savanna/zombie/town_centers/savanna_meeting_point_2", $$6), 1),
+               Pair.of(edn.a("village/savanna/zombie/town_centers/savanna_meeting_point_3", $$6), 3),
+               Pair.of(edn.a("village/savanna/zombie/town_centers/savanna_meeting_point_4", $$6), 3)
             ),
-            new ecg(40, 15, ech.a, 34222645)
+            edp.a.b
          )
       );
-      $$0.a(ebe.l, new ebr(List.of(ebr.a($$1.b(ebf.h)), ebr.a($$1.b(ebf.i))), new ecg(24, 4, ech.a, 165745295)));
-      $$0.a(ebe.m, new ebr(List.of(ebr.a($$1.b(ebf.m)), ebr.a($$1.b(ebf.n))), new ecg(20, 8, ech.a, 14357621)));
-      $$0.a(ebe.n, new ebr(List.of(ebr.a($$1.b(ebf.o), 2), ebr.a($$1.b(ebf.s), 3)), new ecg(27, 4, ech.a, 30084232)));
-      $$0.a(ebe.o, new ebr($$1.b(ebf.p), new ecg(2, 1, ech.a, 14357921)));
-      $$0.a(ebe.p, new ebr($$1.b(ebf.q), new ecg(20, 11, ech.b, 10387313)));
-      $$0.a(ebe.r, new ebr($$1.b(ebf.k), new ecf(32, 3, 128, $$2.b(atz.o))));
-      $$0.a(ebe.s, new ebr($$1.b(ebf.G), new ecg(34, 8, ech.a, 83469867)));
+      pq.a(
+         $$0,
+         "village/savanna/streets",
+         new edp(
+            $$11,
+            ImmutableList.of(
+               Pair.of(edn.a("village/savanna/streets/corner_01", $$7), 2),
+               Pair.of(edn.a("village/savanna/streets/corner_03", $$7), 2),
+               Pair.of(edn.a("village/savanna/streets/straight_02", $$7), 4),
+               Pair.of(edn.a("village/savanna/streets/straight_04", $$7), 7),
+               Pair.of(edn.a("village/savanna/streets/straight_05", $$7), 3),
+               Pair.of(edn.a("village/savanna/streets/straight_06", $$7), 4),
+               Pair.of(edn.a("village/savanna/streets/straight_08", $$7), 4),
+               Pair.of(edn.a("village/savanna/streets/straight_09", $$7), 4),
+               Pair.of(edn.a("village/savanna/streets/straight_10", $$7), 4),
+               Pair.of(edn.a("village/savanna/streets/straight_11", $$7), 4),
+               Pair.of(edn.a("village/savanna/streets/crossroad_02", $$7), 1),
+               Pair.of(edn.a("village/savanna/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(edn.a("village/savanna/streets/crossroad_04", $$7), 2),
+                  Pair.of(edn.a("village/savanna/streets/crossroad_05", $$7), 2),
+                  Pair.of(edn.a("village/savanna/streets/crossroad_06", $$7), 2),
+                  Pair.of(edn.a("village/savanna/streets/crossroad_07", $$7), 2),
+                  Pair.of(edn.a("village/savanna/streets/split_01", $$7), 2),
+                  Pair.of(edn.a("village/savanna/streets/split_02", $$7), 2),
+                  Pair.of(edn.a("village/savanna/streets/turn_01", $$7), 3)
+               }
+            ),
+            edp.a.a
+         )
+      );
+      pq.a(
+         $$0,
+         "village/savanna/zombie/streets",
+         new edp(
+            $$12,
+            ImmutableList.of(
+               Pair.of(edn.a("village/savanna/zombie/streets/corner_01", $$7), 2),
+               Pair.of(edn.a("village/savanna/zombie/streets/corner_03", $$7), 2),
+               Pair.of(edn.a("village/savanna/zombie/streets/straight_02", $$7), 4),
+               Pair.of(edn.a("village/savanna/zombie/streets/straight_04", $$7), 7),
+               Pair.of(edn.a("village/savanna/zombie/streets/straight_05", $$7), 3),
+               Pair.of(edn.a("village/savanna/zombie/streets/straight_06", $$7), 4),
+               Pair.of(edn.a("village/savanna/zombie/streets/straight_08", $$7), 4),
+               Pair.of(edn.a("village/savanna/zombie/streets/straight_09", $$7), 4),
+               Pair.of(edn.a("village/savanna/zombie/streets/straight_10", $$7), 4),
+               Pair.of(edn.a("village/savanna/zombie/streets/straight_11", $$7), 4),
+               Pair.of(edn.a("village/savanna/zombie/streets/crossroad_02", $$7), 1),
+               Pair.of(edn.a("village/savanna/zombie/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(edn.a("village/savanna/zombie/streets/crossroad_04", $$7), 2),
+                  Pair.of(edn.a("village/savanna/zombie/streets/crossroad_05", $$7), 2),
+                  Pair.of(edn.a("village/savanna/zombie/streets/crossroad_06", $$7), 2),
+                  Pair.of(edn.a("village/savanna/zombie/streets/crossroad_07", $$7), 2),
+                  Pair.of(edn.a("village/savanna/zombie/streets/split_01", $$7), 2),
+                  Pair.of(edn.a("village/savanna/zombie/streets/split_02", $$7), 2),
+                  Pair.of(edn.a("village/savanna/zombie/streets/turn_01", $$7), 3)
+               }
+            ),
+            edp.a.a
+         )
+      );
+      pq.a(
+         $$0,
+         "village/savanna/houses",
+         new edp(
+            $$11,
+            ImmutableList.of(
+               Pair.of(edn.a("village/savanna/houses/savanna_small_house_1"), 2),
+               Pair.of(edn.a("village/savanna/houses/savanna_small_house_2"), 2),
+               Pair.of(edn.a("village/savanna/houses/savanna_small_house_3"), 2),
+               Pair.of(edn.a("village/savanna/houses/savanna_small_house_4"), 2),
+               Pair.of(edn.a("village/savanna/houses/savanna_small_house_5"), 2),
+               Pair.of(edn.a("village/savanna/houses/savanna_small_house_6"), 2),
+               Pair.of(edn.a("village/savanna/houses/savanna_small_house_7"), 2),
+               Pair.of(edn.a("village/savanna/houses/savanna_small_house_8"), 2),
+               Pair.of(edn.a("village/savanna/houses/savanna_medium_house_1"), 2),
+               Pair.of(edn.a("village/savanna/houses/savanna_medium_house_2"), 2),
+               Pair.of(edn.a("village/savanna/houses/savanna_butchers_shop_1"), 2),
+               Pair.of(edn.a("village/savanna/houses/savanna_butchers_shop_2"), 2),
+               new Pair[]{
+                  Pair.of(edn.a("village/savanna/houses/savanna_tool_smith_1"), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_fletcher_house_1"), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_shepherd_1"), 7),
+                  Pair.of(edn.a("village/savanna/houses/savanna_armorer_1"), 1),
+                  Pair.of(edn.a("village/savanna/houses/savanna_fisher_cottage_1"), 3),
+                  Pair.of(edn.a("village/savanna/houses/savanna_tannery_1"), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_cartographer_1"), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_library_1"), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_mason_1"), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_weaponsmith_1"), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_weaponsmith_2"), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_temple_1"), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_temple_2"), 3),
+                  Pair.of(edn.a("village/savanna/houses/savanna_large_farm_1", $$8), 4),
+                  Pair.of(edn.a("village/savanna/houses/savanna_large_farm_2", $$8), 6),
+                  Pair.of(edn.a("village/savanna/houses/savanna_small_farm", $$8), 4),
+                  Pair.of(edn.a("village/savanna/houses/savanna_animal_pen_1"), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_animal_pen_2"), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_animal_pen_3"), 2),
+                  Pair.of(edn.g(), 5)
+               }
+            ),
+            edp.a.b
+         )
+      );
+      pq.a(
+         $$0,
+         "village/savanna/zombie/houses",
+         new edp(
+            $$12,
+            ImmutableList.of(
+               Pair.of(edn.a("village/savanna/zombie/houses/savanna_small_house_1", $$6), 2),
+               Pair.of(edn.a("village/savanna/zombie/houses/savanna_small_house_2", $$6), 2),
+               Pair.of(edn.a("village/savanna/zombie/houses/savanna_small_house_3", $$6), 2),
+               Pair.of(edn.a("village/savanna/zombie/houses/savanna_small_house_4", $$6), 2),
+               Pair.of(edn.a("village/savanna/zombie/houses/savanna_small_house_5", $$6), 2),
+               Pair.of(edn.a("village/savanna/zombie/houses/savanna_small_house_6", $$6), 2),
+               Pair.of(edn.a("village/savanna/zombie/houses/savanna_small_house_7", $$6), 2),
+               Pair.of(edn.a("village/savanna/zombie/houses/savanna_small_house_8", $$6), 2),
+               Pair.of(edn.a("village/savanna/zombie/houses/savanna_medium_house_1", $$6), 2),
+               Pair.of(edn.a("village/savanna/zombie/houses/savanna_medium_house_2", $$6), 2),
+               Pair.of(edn.a("village/savanna/houses/savanna_butchers_shop_1", $$6), 2),
+               Pair.of(edn.a("village/savanna/houses/savanna_butchers_shop_2", $$6), 2),
+               new Pair[]{
+                  Pair.of(edn.a("village/savanna/houses/savanna_tool_smith_1", $$6), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_fletcher_house_1", $$6), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_shepherd_1", $$6), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_armorer_1", $$6), 1),
+                  Pair.of(edn.a("village/savanna/houses/savanna_fisher_cottage_1", $$6), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_tannery_1", $$6), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_cartographer_1", $$6), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_library_1", $$6), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_mason_1", $$6), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_weaponsmith_1", $$6), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_weaponsmith_2", $$6), 2),
+                  Pair.of(edn.a("village/savanna/houses/savanna_temple_1", $$6), 1),
+                  Pair.of(edn.a("village/savanna/houses/savanna_temple_2", $$6), 3),
+                  Pair.of(edn.a("village/savanna/houses/savanna_large_farm_1", $$6), 4),
+                  Pair.of(edn.a("village/savanna/zombie/houses/savanna_large_farm_2", $$6), 4),
+                  Pair.of(edn.a("village/savanna/houses/savanna_small_farm", $$6), 4),
+                  Pair.of(edn.a("village/savanna/houses/savanna_animal_pen_1", $$6), 2),
+                  Pair.of(edn.a("village/savanna/zombie/houses/savanna_animal_pen_2", $$6), 2),
+                  Pair.of(edn.a("village/savanna/zombie/houses/savanna_animal_pen_3", $$6), 2),
+                  Pair.of(edn.g(), 5)
+               }
+            ),
+            edp.a.b
+         )
+      );
+      $$0.a(
+         b,
+         new edp(
+            $$10,
+            ImmutableList.of(
+               Pair.of(edn.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(edn.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(edn.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(edn.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(edn.a("village/savanna/terminators/terminator_05", $$7), 1)
+            ),
+            edp.a.a
+         )
+      );
+      $$0.a(
+         c,
+         new edp(
+            $$10,
+            ImmutableList.of(
+               Pair.of(edn.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(edn.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(edn.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(edn.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(edn.a("village/savanna/zombie/terminators/terminator_05", $$7), 1)
+            ),
+            edp.a.a
+         )
+      );
+      pq.a($$0, "village/savanna/trees", new edp($$10, ImmutableList.of(Pair.of(edn.a($$2), 1)), edp.a.b));
+      pq.a(
+         $$0,
+         "village/savanna/decor",
+         new edp(
+            $$10,
+            ImmutableList.of(
+               Pair.of(edn.a("village/savanna/savanna_lamp_post_01"), 4),
+               Pair.of(edn.a($$2), 4),
+               Pair.of(edn.a($$3), 4),
+               Pair.of(edn.a($$4), 1),
+               Pair.of(edn.g(), 4)
+            ),
+            edp.a.b
+         )
+      );
+      pq.a(
+         $$0,
+         "village/savanna/zombie/decor",
+         new edp(
+            $$10,
+            ImmutableList.of(
+               Pair.of(edn.a("village/savanna/savanna_lamp_post_01", $$6), 4),
+               Pair.of(edn.a($$2), 4),
+               Pair.of(edn.a($$3), 4),
+               Pair.of(edn.a($$4), 1),
+               Pair.of(edn.g(), 4)
+            ),
+            edp.a.b
+         )
+      );
+      pq.a(
+         $$0,
+         "village/savanna/villagers",
+         new edp(
+            $$10,
+            ImmutableList.of(
+               Pair.of(edn.a("village/savanna/villagers/nitwit"), 1),
+               Pair.of(edn.a("village/savanna/villagers/baby"), 1),
+               Pair.of(edn.a("village/savanna/villagers/unemployed"), 10)
+            ),
+            edp.a.b
+         )
+      );
+      pq.a(
+         $$0,
+         "village/savanna/zombie/villagers",
+         new edp(
+            $$10,
+            ImmutableList.of(Pair.of(edn.a("village/savanna/zombie/villagers/nitwit"), 1), Pair.of(edn.a("village/savanna/zombie/villagers/unemployed"), 10)),
+            edp.a.b
+         )
+      );
    }
 }
