@@ -1,250 +1,107 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class pv {
-   public static final aix<ecu> a = po.a("village/taiga/town_centers");
-   private static final aix<ecu> b = po.a("village/taiga/terminators");
+   public static ecg.c a(ip<cxd> $$0, Map<bpa, ecn> $$1, drm.b $$2, ecr $$3) {
+      return new ecg.c($$0, $$1, $$2, $$3);
+   }
 
-   public static void a(ph<ecu> $$0) {
-      ik<eap> $$1 = $$0.a(kg.aC);
-      ij<eap> $$2 = $$1.b(re.h);
-      ij<eap> $$3 = $$1.b(re.i);
-      ij<eap> $$4 = $$1.b(re.e);
-      ij<eap> $$5 = $$1.b(re.l);
-      ij<eap> $$6 = $$1.b(re.m);
-      ik<efj> $$7 = $$0.a(kg.aE);
-      ij<efj> $$8 = $$7.b(pp.f);
-      ij<efj> $$9 = $$7.b(pp.d);
-      ij<efj> $$10 = $$7.b(pp.k);
-      ij<efj> $$11 = $$7.b(pp.o);
-      ik<ecu> $$12 = $$0.a(kg.aG);
-      ij<ecu> $$13 = $$12.b(po.a);
-      ij<ecu> $$14 = $$12.b(b);
+   private static ecg.c a(ip<cxd> $$0, drm.b $$1, ecr $$2) {
+      return a($$0, Map.of(), $$1, $$2);
+   }
+
+   private static ecg.c a(ip<cxd> $$0, ecr $$1) {
+      return a($$0, Map.of(), drm.b.e, $$1);
+   }
+
+   public static void a(pj<ecg> $$0) {
+      im<cxd> $$1 = $$0.a(ki.au);
+      im<edp> $$2 = $$0.a(ki.aH);
       $$0.a(
-         a,
-         new ecu(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ecs.a("village/taiga/town_centers/taiga_meeting_point_1", $$8), 49),
-               Pair.of(ecs.a("village/taiga/town_centers/taiga_meeting_point_2", $$8), 49),
-               Pair.of(ecs.a("village/taiga/zombie/town_centers/taiga_meeting_point_1", $$9), 1),
-               Pair.of(ecs.a("village/taiga/zombie/town_centers/taiga_meeting_point_2", $$9), 1)
-            ),
-            ecu.a.b
+         eca.a,
+         new eeg(
+            a($$1.b(aud.y), Map.of(bpa.a, new ecn(ecn.a.b, bkz.a(new cxp.c(bol.aA, 1, 1, 1)))), drm.b.e, ecr.c), $$2.b(po.a), 7, eam.a(dsk.a(0)), true, drq.a.a
          )
       );
-      po.a(
-         $$0,
-         "village/taiga/streets",
-         new ecu(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ecs.a("village/taiga/streets/corner_01", $$10), 2),
-               Pair.of(ecs.a("village/taiga/streets/corner_02", $$10), 2),
-               Pair.of(ecs.a("village/taiga/streets/corner_03", $$10), 2),
-               Pair.of(ecs.a("village/taiga/streets/straight_01", $$10), 4),
-               Pair.of(ecs.a("village/taiga/streets/straight_02", $$10), 4),
-               Pair.of(ecs.a("village/taiga/streets/straight_03", $$10), 4),
-               Pair.of(ecs.a("village/taiga/streets/straight_04", $$10), 7),
-               Pair.of(ecs.a("village/taiga/streets/straight_05", $$10), 7),
-               Pair.of(ecs.a("village/taiga/streets/straight_06", $$10), 4),
-               Pair.of(ecs.a("village/taiga/streets/crossroad_01", $$10), 1),
-               Pair.of(ecs.a("village/taiga/streets/crossroad_02", $$10), 1),
-               Pair.of(ecs.a("village/taiga/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(ecs.a("village/taiga/streets/crossroad_04", $$10), 2),
-                  Pair.of(ecs.a("village/taiga/streets/crossroad_05", $$10), 2),
-                  Pair.of(ecs.a("village/taiga/streets/crossroad_06", $$10), 2),
-                  Pair.of(ecs.a("village/taiga/streets/turn_01", $$10), 3)
-               }
-            ),
-            ecu.a.a
-         )
-      );
-      po.a(
-         $$0,
-         "village/taiga/zombie/streets",
-         new ecu(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ecs.a("village/taiga/zombie/streets/corner_01", $$10), 2),
-               Pair.of(ecs.a("village/taiga/zombie/streets/corner_02", $$10), 2),
-               Pair.of(ecs.a("village/taiga/zombie/streets/corner_03", $$10), 2),
-               Pair.of(ecs.a("village/taiga/zombie/streets/straight_01", $$10), 4),
-               Pair.of(ecs.a("village/taiga/zombie/streets/straight_02", $$10), 4),
-               Pair.of(ecs.a("village/taiga/zombie/streets/straight_03", $$10), 4),
-               Pair.of(ecs.a("village/taiga/zombie/streets/straight_04", $$10), 7),
-               Pair.of(ecs.a("village/taiga/zombie/streets/straight_05", $$10), 7),
-               Pair.of(ecs.a("village/taiga/zombie/streets/straight_06", $$10), 4),
-               Pair.of(ecs.a("village/taiga/zombie/streets/crossroad_01", $$10), 1),
-               Pair.of(ecs.a("village/taiga/zombie/streets/crossroad_02", $$10), 1),
-               Pair.of(ecs.a("village/taiga/zombie/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(ecs.a("village/taiga/zombie/streets/crossroad_04", $$10), 2),
-                  Pair.of(ecs.a("village/taiga/zombie/streets/crossroad_05", $$10), 2),
-                  Pair.of(ecs.a("village/taiga/zombie/streets/crossroad_06", $$10), 2),
-                  Pair.of(ecs.a("village/taiga/zombie/streets/turn_01", $$10), 3)
-               }
-            ),
-            ecu.a.a
-         )
-      );
-      po.a(
-         $$0,
-         "village/taiga/houses",
-         new ecu(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ecs.a("village/taiga/houses/taiga_small_house_1", $$8), 4),
-               Pair.of(ecs.a("village/taiga/houses/taiga_small_house_2", $$8), 4),
-               Pair.of(ecs.a("village/taiga/houses/taiga_small_house_3", $$8), 4),
-               Pair.of(ecs.a("village/taiga/houses/taiga_small_house_4", $$8), 4),
-               Pair.of(ecs.a("village/taiga/houses/taiga_small_house_5", $$8), 4),
-               Pair.of(ecs.a("village/taiga/houses/taiga_medium_house_1", $$8), 2),
-               Pair.of(ecs.a("village/taiga/houses/taiga_medium_house_2", $$8), 2),
-               Pair.of(ecs.a("village/taiga/houses/taiga_medium_house_3", $$8), 2),
-               Pair.of(ecs.a("village/taiga/houses/taiga_medium_house_4", $$8), 2),
-               Pair.of(ecs.a("village/taiga/houses/taiga_butcher_shop_1", $$8), 2),
-               Pair.of(ecs.a("village/taiga/houses/taiga_tool_smith_1", $$8), 2),
-               Pair.of(ecs.a("village/taiga/houses/taiga_fletcher_house_1", $$8), 2),
-               new Pair[]{
-                  Pair.of(ecs.a("village/taiga/houses/taiga_shepherds_house_1", $$8), 2),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_armorer_house_1", $$8), 1),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_armorer_2", $$8), 1),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_fisher_cottage_1", $$8), 3),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_tannery_1", $$8), 2),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_cartographer_house_1", $$8), 2),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_library_1", $$8), 2),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_masons_house_1", $$8), 2),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_weaponsmith_1", $$8), 2),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_weaponsmith_2", $$8), 2),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_temple_1", $$8), 2),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_large_farm_1", $$11), 6),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_large_farm_2", $$11), 6),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_small_farm_1", $$8), 1),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_animal_pen_1", $$8), 2),
-                  Pair.of(ecs.g(), 6)
-               }
-            ),
-            ecu.a.b
-         )
-      );
-      po.a(
-         $$0,
-         "village/taiga/zombie/houses",
-         new ecu(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ecs.a("village/taiga/zombie/houses/taiga_small_house_1", $$9), 4),
-               Pair.of(ecs.a("village/taiga/zombie/houses/taiga_small_house_2", $$9), 4),
-               Pair.of(ecs.a("village/taiga/zombie/houses/taiga_small_house_3", $$9), 4),
-               Pair.of(ecs.a("village/taiga/zombie/houses/taiga_small_house_4", $$9), 4),
-               Pair.of(ecs.a("village/taiga/zombie/houses/taiga_small_house_5", $$9), 4),
-               Pair.of(ecs.a("village/taiga/zombie/houses/taiga_medium_house_1", $$9), 2),
-               Pair.of(ecs.a("village/taiga/zombie/houses/taiga_medium_house_2", $$9), 2),
-               Pair.of(ecs.a("village/taiga/zombie/houses/taiga_medium_house_3", $$9), 2),
-               Pair.of(ecs.a("village/taiga/zombie/houses/taiga_medium_house_4", $$9), 2),
-               Pair.of(ecs.a("village/taiga/houses/taiga_butcher_shop_1", $$9), 2),
-               Pair.of(ecs.a("village/taiga/zombie/houses/taiga_tool_smith_1", $$9), 2),
-               Pair.of(ecs.a("village/taiga/houses/taiga_fletcher_house_1", $$9), 2),
-               new Pair[]{
-                  Pair.of(ecs.a("village/taiga/zombie/houses/taiga_shepherds_house_1", $$9), 2),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_armorer_house_1", $$9), 1),
-                  Pair.of(ecs.a("village/taiga/zombie/houses/taiga_fisher_cottage_1", $$9), 2),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_tannery_1", $$9), 2),
-                  Pair.of(ecs.a("village/taiga/zombie/houses/taiga_cartographer_house_1", $$9), 2),
-                  Pair.of(ecs.a("village/taiga/zombie/houses/taiga_library_1", $$9), 2),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_masons_house_1", $$9), 2),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_weaponsmith_1", $$9), 2),
-                  Pair.of(ecs.a("village/taiga/zombie/houses/taiga_weaponsmith_2", $$9), 2),
-                  Pair.of(ecs.a("village/taiga/zombie/houses/taiga_temple_1", $$9), 2),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_large_farm_1", $$9), 6),
-                  Pair.of(ecs.a("village/taiga/zombie/houses/taiga_large_farm_2", $$9), 6),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_small_farm_1", $$9), 1),
-                  Pair.of(ecs.a("village/taiga/houses/taiga_animal_pen_1", $$9), 2),
-                  Pair.of(ecs.g(), 6)
-               }
-            ),
-            ecu.a.b
-         )
-      );
+      $$0.a(eca.b, new eek(a($$1.b(aud.t), drm.b.d, ecr.a), eek.a.a));
+      $$0.a(eca.c, new eek(a($$1.b(aud.u), drm.b.d, ecr.a), eek.a.b));
+      $$0.a(eca.d, new efc(a($$1.b(aud.Q), ecr.a)));
+      $$0.a(eca.e, new eei(a($$1.b(aud.s), ecr.a)));
+      $$0.a(eca.f, new eeb(a($$1.b(aud.q), ecr.a)));
+      $$0.a(eca.g, new eef(a($$1.b(aud.r), ecr.a)));
+      $$0.a(eca.h, new eew(a($$1.b(aud.G), ecr.a), false));
+      $$0.a(eca.i, new eew(a($$1.b(aud.F), ecr.a), true));
       $$0.a(
-         b,
-         new ecu(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ecs.a("village/plains/terminators/terminator_01", $$10), 1),
-               Pair.of(ecs.a("village/plains/terminators/terminator_02", $$10), 1),
-               Pair.of(ecs.a("village/plains/terminators/terminator_03", $$10), 1),
-               Pair.of(ecs.a("village/plains/terminators/terminator_04", $$10), 1)
-            ),
-            ecu.a.a
+         eca.j,
+         new efa(
+            a(
+               $$1.b(aud.J),
+               Map.of(bpa.a, new ecn(ecn.a.a, bkz.a(new cxp.c(bol.bm, 1, 1, 1))), bpa.b, new ecn(ecn.a.a, bkz.a(new cxp.c(bol.o, 1, 1, 1)))),
+               drm.b.e,
+               ecr.a
+            )
          )
       );
-      po.a(
-         $$0,
-         "village/taiga/decor",
-         new ecu(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ecs.a("village/taiga/taiga_lamp_post_1"), 10),
-               Pair.of(ecs.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(ecs.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(ecs.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(ecs.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(ecs.a("village/taiga/taiga_decoration_5"), 2),
-               Pair.of(ecs.a("village/taiga/taiga_decoration_6"), 1),
-               Pair.of(ecs.a($$2), 4),
-               Pair.of(ecs.a($$3), 4),
-               Pair.of(ecs.a($$4), 2),
-               Pair.of(ecs.a($$5), 4),
-               Pair.of(ecs.a($$6), 1),
-               new Pair[]{Pair.of(ecs.g(), 4)}
-            ),
-            ecu.a.b
+      $$0.a(eca.k, new eey(a($$1.b(aud.H), ecr.b)));
+      $$0.a(
+         eca.l,
+         new eeq(
+            a(
+               $$1.b(aud.v),
+               Map.of(bpa.a, new ecn(ecn.a.b, bkz.a(new cxp.c(bol.X, 1, 2, 4))), bpa.e, new ecn(ecn.a.b, cxp.a), bpa.d, new ecn(ecn.a.b, cxp.a)),
+               drm.b.e,
+               ecr.a
+            )
          )
       );
-      po.a(
-         $$0,
-         "village/taiga/zombie/decor",
-         new ecu(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ecs.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(ecs.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(ecs.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(ecs.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(ecs.a($$2), 4),
-               Pair.of(ecs.a($$3), 4),
-               Pair.of(ecs.a($$4), 2),
-               Pair.of(ecs.a($$5), 4),
-               Pair.of(ecs.a($$6), 1),
-               Pair.of(ecs.g(), 4)
-            ),
-            ecu.a.b
+      $$0.a(eca.m, new ees(a($$1.b(aud.w), ecr.a), ees.a.b, 0.3F, 0.9F));
+      $$0.a(eca.n, new ees(a($$1.b(aud.x), ecr.a), ees.a.a, 0.3F, 0.9F));
+      $$0.a(eca.o, new eem(a($$1.b(aud.R), Map.of(bpa.a, new ecn(ecn.a.a, eem.d)), drm.b.h, ecr.a)));
+      $$0.a(eca.p, new eeo(a($$1.b(aud.S), drm.b.h, ecr.c), eaq.a(dsk.a(32), dsk.c(2))));
+      $$0.a(eca.q, new eed(a($$1.b(aud.W), ecr.a)));
+      $$0.a(eca.r, new edz(a($$1.b(aud.p), drm.b.d, ecr.a)));
+      $$0.a(eca.s, new eeg(a($$1.b(aud.T), ecr.a), $$2.b(pf.a), 6, eam.a(dsk.a(33)), false));
+      $$0.a(eca.t, new eeg(a($$1.b(aud.L), ecr.c), $$2.b(pp.a), 6, eam.a(dsk.a(0)), true, drq.a.a));
+      $$0.a(eca.u, new eeg(a($$1.b(aud.K), ecr.c), $$2.b(pl.a), 6, eam.a(dsk.a(0)), true, drq.a.a));
+      $$0.a(eca.v, new eeg(a($$1.b(aud.M), ecr.c), $$2.b(ps.a), 6, eam.a(dsk.a(0)), true, drq.a.a));
+      $$0.a(eca.w, new eeg(a($$1.b(aud.N), ecr.c), $$2.b(pt.a), 6, eam.a(dsk.a(0)), true, drq.a.a));
+      $$0.a(eca.x, new eeg(a($$1.b(aud.O), ecr.c), $$2.b(px.a), 6, eam.a(dsk.a(0)), true, drq.a.a));
+      $$0.a(
+         eca.y,
+         new eeu(
+            a($$1.b(aud.E), ecr.a),
+            List.of(new eeu.a(eet.b.e, 1.0F, 0.2F, false, false, true, false, 0.5F), new eeu.a(eet.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
          )
       );
-      po.a(
-         $$0,
-         "village/taiga/villagers",
-         new ecu(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ecs.a("village/taiga/villagers/nitwit"), 1),
-               Pair.of(ecs.a("village/taiga/villagers/baby"), 1),
-               Pair.of(ecs.a("village/taiga/villagers/unemployed"), 10)
-            ),
-            ecu.a.b
+      $$0.a(eca.z, new eeu(a($$1.b(aud.z), ecr.a), new eeu.a(eet.b.b, 0.0F, 0.0F, false, false, false, false, 1.0F)));
+      $$0.a(eca.A, new eeu(a($$1.b(aud.A), ecr.a), new eeu.a(eet.b.a, 0.5F, 0.8F, true, true, false, false, 1.0F)));
+      $$0.a(eca.B, new eeu(a($$1.b(aud.C), ecr.a), new eeu.a(eet.b.c, 0.0F, 0.5F, false, true, false, false, 1.0F)));
+      $$0.a(
+         eca.C,
+         new eeu(
+            a($$1.b(aud.D), ecr.a),
+            List.of(new eeu.a(eet.b.d, 1.0F, 0.2F, false, false, true, false, 0.5F), new eeu.a(eet.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
          )
       );
-      po.a(
-         $$0,
-         "village/taiga/zombie/villagers",
-         new ecu(
-            $$13,
-            ImmutableList.of(Pair.of(ecs.a("village/taiga/zombie/villagers/nitwit"), 1), Pair.of(ecs.a("village/taiga/zombie/villagers/unemployed"), 10)),
-            ecu.a.b
+      $$0.a(eca.D, new eeu(a($$1.b(aud.B), ecr.a), new eeu.a(eet.b.c, 0.0F, 0.8F, false, false, true, false, 1.0F)));
+      $$0.a(eca.E, new eeu(a($$1.b(aud.V), ecr.a), new eeu.a(eet.b.f, 0.5F, 0.0F, false, false, false, true, 1.0F)));
+      $$0.a(
+         eca.F,
+         new eeg(
+            a($$1.b(aud.U), Arrays.stream(bpa.values()).collect(Collectors.toMap($$0x -> $$0x, $$0x -> new ecn(ecn.a.b, bkz.c()))), drm.b.h, ecr.d),
+            $$2.b(pa.a),
+            Optional.of(new ajc("city_anchor")),
+            7,
+            eam.a(dsk.a(-27)),
+            false,
+            Optional.empty(),
+            116,
+            List.of()
          )
       );
+      $$0.a(eca.G, new eeg(a($$1.b(aud.P), Map.of(), drm.b.d, ecr.b), $$2.b(pz.a), 7, eam.a(dsk.a(-15)), false, drq.a.a));
    }
 }
