@@ -1,55 +1,17 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 public class qn {
-   public static final aix<dtm<?, ?>> a = qm.a("ice_spike");
-   public static final aix<dtm<?, ?>> b = qm.a("ice_patch");
-   public static final aix<dtm<?, ?>> c = qm.a("forest_rock");
-   public static final aix<dtm<?, ?>> d = qm.a("iceberg_packed");
-   public static final aix<dtm<?, ?>> e = qm.a("iceberg_blue");
-   public static final aix<dtm<?, ?>> f = qm.a("blue_ice");
-   public static final aix<dtm<?, ?>> g = qm.a("lake_lava");
-   public static final aix<dtm<?, ?>> h = qm.a("disk_clay");
-   public static final aix<dtm<?, ?>> i = qm.a("disk_gravel");
-   public static final aix<dtm<?, ?>> j = qm.a("disk_sand");
-   public static final aix<dtm<?, ?>> k = qm.a("freeze_top_layer");
-   public static final aix<dtm<?, ?>> l = qm.a("disk_grass");
-   public static final aix<dtm<?, ?>> m = qm.a("bonus_chest");
-   public static final aix<dtm<?, ?>> n = qm.a("void_start_platform");
-   public static final aix<dtm<?, ?>> o = qm.a("desert_well");
-   public static final aix<dtm<?, ?>> p = qm.a("spring_lava_overworld");
-   public static final aix<dtm<?, ?>> q = qm.a("spring_lava_frozen");
-   public static final aix<dtm<?, ?>> r = qm.a("spring_water");
+   public static final ajb<duh<?, ?>> a = qo.a("end_spike");
+   public static final ajb<duh<?, ?>> b = qo.a("end_gateway_return");
+   public static final ajb<duh<?, ?>> c = qo.a("end_gateway_delayed");
+   public static final ajb<duh<?, ?>> d = qo.a("chorus_plant");
+   public static final ajb<duh<?, ?>> e = qo.a("end_island");
 
-   public static void a(ph<dtm<?, ?>> $$0) {
-      qm.a($$0, a, dtz.s);
-      qm.a($$0, b, dtz.G, new dwa(dym.a(cyu.iC), dsc.c(List.of(cyu.j, cyu.i, cyu.l, cyu.k, cyu.fl, cyu.dP, cyu.dO)), blh.a(2, 3), 1));
-      qm.a($$0, c, dtz.F, new dvw(cyu.cn.o()));
-      qm.a($$0, d, dtz.E, new dvw(cyu.iC.o()));
-      qm.a($$0, e, dtz.E, new dvw(cyu.mW.o()));
-      qm.a($$0, f, dtz.D);
-      qm.a($$0, g, dtz.H, new duo.a(dye.a(cyu.H.o()), dye.a(cyu.b.o())));
-      qm.a($$0, h, dtz.G, new dwa(dym.a(cyu.dR), dsc.c(List.of(cyu.j, cyu.dR)), blh.a(2, 3), 1));
-      qm.a($$0, i, dtz.G, new dwa(dym.a(cyu.L), dsc.c(List.of(cyu.j, cyu.i)), blh.a(2, 5), 2));
-      qm.a(
-         $$0, j, dtz.G, new dwa(new dym(dye.a(cyu.I), List.of(new dym.a(dsc.a(ie.a.q(), cyu.a), dye.a(cyu.aV)))), dsc.c(List.of(cyu.j, cyu.i)), blh.a(2, 6), 2)
-      );
-      qm.a($$0, k, dtz.u);
-      qm.a(
-         $$0,
-         l,
-         dtz.G,
-         new dwa(
-            new dym(dye.a(cyu.j), List.of(new dym.a(dsc.a(dsc.b(dsc.b(ie.b.q()), dsc.a(ie.b.q(), egx.c))), dye.a(cyu.i)))),
-            dsc.c(List.of(cyu.j, cyu.sI)),
-            blh.a(2, 6),
-            2
-         )
-      );
-      qm.a($$0, m, dtz.ac);
-      qm.a($$0, n, dtz.n);
-      qm.a($$0, o, dtz.o);
-      qm.a($$0, p, dtz.k, new dwy(egx.e.g(), true, 4, 1, in.a(cys::r, cyu.b, cyu.c, cyu.e, cyu.g, cyu.sJ, cyu.qz, cyu.qN, cyu.j)));
-      qm.a($$0, q, dtz.k, new dwy(egx.e.g(), true, 4, 1, in.a(cys::r, cyu.dP, cyu.qP, cyu.iC)));
-      qm.a($$0, r, dtz.k, new dwy(egx.c.g(), true, 4, 1, in.a(cys::r, cyu.b, cyu.c, cyu.e, cyu.g, cyu.sJ, cyu.qz, cyu.qN, cyu.j, cyu.dP, cyu.qP, cyu.iC)));
+   public static void a(pj<duh<?, ?>> $$0) {
+      qo.a($$0, a, duu.J, new dxs(false, ImmutableList.of(), null));
+      qo.a($$0, b, duu.L, dwx.a(apa.a, true));
+      qo.a($$0, c, duu.L, dwx.a());
+      qo.a($$0, d, duu.l);
+      qo.a($$0, e, duu.K);
    }
 }
